--- a/_data/releases.yml
+++ b/_data/releases.yml
@@ -16,6 +16,6 @@ synapspec:
     - Fixed memory leak issues
     - Resolved compatibility problems
   downloads:
-    windows: "https://github.com/bionsight/DeepMSFlow/releases/download/v0.2.4/synapspec-windows-0.2.4.exe" # TODO: change to S3 link (TBD)
-    macos: "https://github.com/bionsight/DeepMSFlow/releases/download/v0.2.4/synapspec-macos-0.2.4.dmg" # TODO: change to S3 link (TBD)
-    linux: "https://github.com/bionsight/DeepMSFlow/releases/download/v0.2.4/SynapSpec-linux-0.2.4.tar.gz" # TODO: change to S3 link (TBD)
+    windows: "https://github.com/bionsight/DeepMSFlow/releases/download/v0.2.4/DeepMSFlow-windows-0.2.4.exe" # TODO: change to S3 link (TBD)
+    macos: "https://github.com/bionsight/DeepMSFlow/releases/download/v0.2.4/DeepMSFlow-macos-0.2.4.dmg" # TODO: change to S3 link (TBD)
+    linux: "https://github.com/bionsight/DeepMSFlow/releases/download/v0.2.4/DeepMSFlow-linux-0.2.4.tar.gz" # TODO: change to S3 link (TBD)
