Update website content - 2025-10-29 16:38

--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ baseurl: ""
 
 # Company information
 company:
-  name: "SynapSpec"
+  name: "Bionsight"
   tagline: "Advancing Scientific Discovery Through Proteomics"
   email: "contact@bionsight.com"
   github: "bionsight"
