--- a/_data/releases.yml
+++ b/_data/releases.yml
@@ -2,6 +2,8 @@ synapspec:
   version: "0.4.0"
   name: "SynapSpec 0.4.0"
   downloads:
-    windows: "https://d3s63qbeileh4l.cloudfront.net/0.4.0/SynapSpec-windows-0.4.0.msi"
+    windows_gpu: "https://d3s63qbeileh4l.cloudfront.net/0.4.0/SynapSpec-windows-0.4.0.msi"
+    windows_cpu: "https://d3s63qbeileh4l.cloudfront.net/0.4.0/SynapSpec-windows-cpu-0.4.0.msi"
+    linux_gpu: "https://d3s63qbeileh4l.cloudfront.net/0.4.0/SynapSpec-linux-0.4.0.tar.gz"
+    linux_cpu: "https://d3s63qbeileh4l.cloudfront.net/0.4.0/SynapSpec-linux-cpu-0.4.0.tar.gz"
     macos: "https://d3s63qbeileh4l.cloudfront.net/0.4.0/SynapSpec-macos-0.4.0.dmg"
-    linux: "https://d3s63qbeileh4l.cloudfront.net/0.4.0/SynapSpec-linux-0.4.0.tar.gz"
